# app

./: .dockerignore  .gitignore  CLAUDE.md  COPYING.md  Cargo.toml  README.md  UPSTREAM_SYNC.md  docker-compose.yml  pnpm-lock.yaml
apps/labrinth/: .dockerignore  .env  .gitattributes  Cargo.toml  Dockerfile  Dockerfile.run.xml  README.md
apps/labrinth/.sqlx/: query-014d3791783073d947a3e6b6fba64c3ae044439f3ba3826a6b0d9319627abc11.json  query-03ac4831a3c09db6eda295d17225e31603d831455ba469b3278477086e3f137d.json  query-03cac091bb2c8c8af2e7a32ab86c22602f650845675820722d625e84ea3a5948.json  query-0410b0eac69482a0da290a2cd500c28023fab594bbd98893fb61a5a63dab11a1.json  query-05284c85b87618bf8dbf84bf23cbc89cf222bff93d52f3fe6c38797e0e7f5670.json  query-05e5be57289ca2ddc8dcf7338f61cce5126334d29a129f5bcfc7936efe3026d7.json  query-06141a77712fe41e2bd035e850c3dc3fc31d2408811b4928027a4cc32a300b77.json  query-06d0c16b904fe30117a82100f5a4111aab872ac06d1ca78fe1c15b5ad45ae5f9.json  query-071fdd2daa66d0679dc50170ad891437efdeabeed9ecc4f04009b89e88e9a5bc.json  query-079d4c575c377553647dd42d61d44d98446d83060c24441948c3c5c29e1a7b2f.json  query-088f19f126db086f419c8f657ea8a8759874ee24f3f5a760b9f39448ddbf8ce5.json  query-091483d2d56ed530b11e1c840e6e6dce39c98b2e7a1b00ce27a744ca1ffcfe60.json  query-0ae2380fe7834bbb9858b029210a3222f20655213556c5fb20bdd0a7d43deb25.json  query-0ae51467fbc9fd01b8e40da9c22aa2f765bf387e8ad6fcc68da7658829d35769.json  query-0b0fb7a9cacf59abe3e3a686fe8151218b96b5692d7d2bddfadc861f74aabd98.json  query-0c430ca31101ab33a802296768b03c4ce79058542654e1fa3f54970de6103e34.json  query-0d7fceef17921e510a141b4959756dea7208bb496733eb40fbd436a0699a1713.json  query-0f7f86a397a3199ca94464affb9d8f8d7a803f28281c4ac056b4f79362b2eb1f.json  query-1028f6b202e01e84630d4fce7d62f996814d0b00f0a93d0600d0ff2910b6dab9.json  query-1107253baa23f8ccfaddaccf777d86ea711b3673d2dde4a7605dc21e01b96296.json  query-118f5a6a36f68322c4fb07f493f1f6426fc0b6e7ccd2dd3ca84f14626d94433b.json  query-12983b7f3e498b00ff056334c21a331940d38ebc673b8aa5010aece1a8173640.json  query-12f068f2c17b194b6e1b28d5cfd0cf2344944bd429430872bf7bb20a3e954af5.json  query-1637a1c3628426f73dabb1a545ae7ce910f02b9f628cbaaddd39b13e91620ef7.json  query-184aebaa6be6cb4c3a73886499cef30d586360eca93fb643e1c49c416bee8d37.json  query-199182427473ab86c6be1af17e883b3b6148f9f412f48c07a17726a01c96849f.json  query-19afcd1c8297e888182c7da78842a16649fd9cb07202025c2c14822c9d53606d.json  query-1a763dd4c5a5e7f72aec7f6e30a1a7b2545635325ea962895aa8a190bbfbe1f1.json  query-1c49b46b5f6947aa8ab41dc485987eec8211e972fc6af036bd8e7865cd05a2f6.json  query-1dacae76f2c037eed658a765039fd5b7a3555b29081ca8744abf404841321ad0.json  query-1f62b43baa346436006db005ff72a761c3f63a8ba7c6104d509cda13b71a53d8.json  query-20b101468f5babd7bf758d373c08afd5032eb70b0a7e20bdbbb2ff88d1f3319e.json  query-232eaa97bcd0a679cb891800c8452c0c326aa2ee4b865875948ce9b4b65b8ecd.json  query-27ec68b460ba5050754a81c054569544dd465412d1978b08dea49a606517e86e.json  query-28433153495de710a756752cc99d5368c166c4629e1b6d90c551c7d1ecfa8b0e.json  query-2986d82e9ed394648f5ee5e0364b528b732b5ac81c3e8539ada1137671a3ad21.json  query-2b07d05715b3d8023973cae0f3776ea814ae9ac9fd9bb229c6ad37383ccc2333.json  query-2bde65c9f3e0723fcc4ae76f3214148d32c9c1b19b8620dcf129e8592f7720a4.json  query-2c80d86001f8ec09627e54a994eb873cf2ccf482c711daadcee539fe6909dd39.json  query-2cee0a503e184a33b00ec40dcba0d4d72c4d648c1facc6060782288fcdc775c0.json  (+261 more)
apps/labrinth/migrations/: 20241204162712_wikis.sql  20241206214133_wiki_cache.sql  20241208152311_wiki_image.sql  202412110116617_project_wiki_set.sql  20241217023411_wiki_perm.sql  202412190016651_user_wiki.sql  202412201832411_project_default_type.sql  202412221900312_version_disk_url.sql  202501140631451_forum_last_post_time.sql  202501151853142_user_phonenumber.sql  202506152156171_issues.sql  202507012211131_issues_powerswitch.sql  202507121644581_drop_project_default_fields.sql  202507140150191_init_language.sql  202507261702231_language_version_link.sql  202507261702232_language_version_link_enhance.sql  202508122304151_version_link_approval_status.sql  20251125120000_user_bans.sql  202512131730000_version_link_thread.sql  20251222000001_decouple_threads_from_projects.sql  20251222000002_random_project_index.sql  20251223000001_store_ids_as_text.sql  20251229010650_translation_tracking.sql  20251229153506_translation_tracker.sql  20260125000001_creator_applications.sql  20260125000002_creator_application_thread.sql  20260130000001_payment_merchants.sql  20260130000002_paid_resources.sql  20260130000003_pricing_constraints.sql  20260130000004_paid_resources_constraints.sql  20260130000005_extend_qr_code_url.sql  20260203000001_add_mcmod_mc9y_link_platforms.sql  20260222120001_user_profile_reviews.sql  20260222180001_image_content_reviews.sql  20260223010001_image_reviews_risk_url.sql  20260224120001_add_bilibili_id.sql  20260226120001_add_qq_id.sql  20260226120002_add_oauth_indexes.sql
apps/labrinth/sqls/: 202412290247412_posts.sql  202412290247413_posts_test_data.sql  202501060323431_disk_urls.sql  202501070247412_chat_seed.sql
apps/labrinth/src/: lib.rs  main.rs  scheduler.rs
apps/labrinth/src/auth/: checks.rs  mod.rs  validate.rs
apps/labrinth/src/clickhouse/: fetch.rs  mod.rs
apps/labrinth/src/database/: postgres_database.rs  redis.rs
apps/labrinth/src/file_hosting/: mock.rs  mod.rs  s3_host.rs  s3_private_host.rs
apps/labrinth/src/models/: mod.rs
apps/labrinth/src/queue/: maxmind.rs  mod.rs  moderation.rs  payouts.rs
apps/labrinth/src/routes/: analytics.rs  index.rs  maven.rs  mod.rs  updates.rs  v2_reroute.rs
apps/labrinth/src/scheduler/: mod.rs  translation_tracking.rs  versions.rs
apps/labrinth/src/search/: mod.rs
apps/labrinth/src/util/: actix.rs  ban_check.rs  captcha.rs  cors.rs  date.rs  encrypt.rs  ext.rs  guards.rs  img.rs  indexnow.rs  mod.rs  phone.rs  ratelimit.rs  risk.rs  routes.rs  safe_path.rs  validate.rs  webhook.rs
apps/labrinth/src/validate/: datapack.rs  fabric.rs  forge.rs  liteloader.rs  mod.rs  modpack.rs  (+6 more)
apps/labrinth/tests/: oauth_clients.rs
(+322 files in other folders)
