[package]
name = "labrinth"
version = "2.7.0"
authors = ["geometrically <jai@modrinth.com>"]
edition.workspace = true
license.workspace = true

[[bin]]
name = "labrinth"
path = "src/main.rs"

[dependencies]
# Web 框架
actix-web.workspace = true
actix-rt.workspace = true
actix-multipart.workspace = true
actix-cors.workspace = true
actix-ws.workspace = true
actix-files.workspace = true
actix-web-prom.workspace = true
governor.workspace = true

# 异步运行时
tokio.workspace = true
tokio-stream.workspace = true

# 异步工具
futures.workspace = true
futures-util.workspace = true
async-trait.workspace = true
dashmap.workspace = true
lazy_static = "1.4.0"

# 搜索和存储
meilisearch-sdk.workspace = true
rust-s3.workspace = true

# HTTP 客户端
reqwest.workspace = true
hyper.workspace = true
hyper-rustls.workspace = true

# 序列化
serde_json.workspace = true
serde.workspace = true
serde_with.workspace = true
chrono.workspace = true
yaserde.workspace = true
yaserde_derive.workspace = true
xml-rs.workspace = true

# 加密和安全
rand.workspace = true
rand_chacha.workspace = true
bytes.workspace = true
base64.workspace = true
sha1.workspace = true
sha2.workspace = true
md5 = "0.7"
hmac.workspace = true
subtle = "2.5"  # 常量时间比较
argon2.workspace = true
murmur2.workspace = true
bitflags.workspace = true
hex.workspace = true
zxcvbn.workspace = true
totp-rs.workspace = true
ring.workspace = true

# URL 处理
url.workspace = true
urlencoding.workspace = true

# 压缩和归档
zip.workspace = true
flate2.workspace = true
tar.workspace = true

# 工具库
itertools.workspace = true

# 验证
validator.workspace = true
regex.workspace = true
censor.workspace = true
spdx.workspace = true

# 日志和错误
dotenvy.workspace = true
log.workspace = true
env_logger.workspace = true
thiserror.workspace = true
eyre.workspace = true
tracing.workspace = true
tracing-actix-web.workspace = true
modrinth-log.workspace = true

# 数据库
sqlx.workspace = true
rust_decimal.workspace = true

# 缓存
redis.workspace = true
deadpool-redis.workspace = true

# 分析数据库
clickhouse.workspace = true
uuid.workspace = true

# 监控
sentry.workspace = true
sentry-actix.workspace = true

# 图像处理
image.workspace = true
color-thief.workspace = true
webp.workspace = true

# 用户代理解析
woothee.workspace = true

# 邮件
lettre.workspace = true

# 其他
derive-new.workspace = true
rust_iso3166.workspace = true
json-patch.workspace = true

# 支付 (Stripe)
async-stripe.workspace = true
rusty-money.workspace = true

# BBSMC 专用依赖
alibaba-cloud-sdk-rust.workspace = true

# jemalloc (可选)
tikv-jemallocator = { version = "0.6.0", optional = true }

[dev-dependencies]
actix-http.workspace = true

[features]
jemalloc = ["tikv-jemallocator"]
